--- a/src/Components/Cards/LandingPageProducts.css
+++ b/src/Components/Cards/LandingPageProducts.css
@@ -1,14 +1,21 @@
 .card{
     background-color: rgba(33, 33, 26, 1);
-    width: 15vw;
+    width: 10vw;
+    min-width: 100px;
+    align-items: center;
 }
 .CardLink{
     background-color: rgba(255, 113, 0, 1);
     height: 2.5vh;
+    width: 8vw;
+    min-width: 90px;
 }
 .CardLink:hover{
     opacity: 0.7;
 }
 .ImageEquipment{
     width: 10vw;
+}
+.ProductName{
+    font-size: calc(0.75rem + 0.5vw);
 }
